--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 # tasks file for tmux-conf
 - name: ghq root
-  shell: "{{tmux_conf_ghq_executable}} root"
+  shell: "{{ghq_executable}} root"
   register: ghq_root
   changed_when: false
 - name: Clone tmux config repository
   ghq:
     name: "{{remote_repository_path}}"
-    executable: "{{tmux_conf_ghq_executable}}"
+    executable: "{{ghq_executable}}"
 - name: Check existing ~/.tmux.conf
   stat:
     path: "{{ansible_env.HOME}}/.tmux.conf"
