--- a/tests/test.yml
+++ b/tests/test.yml
@@ -4,5 +4,5 @@
   roles:
   - suzuki-shunsuke.ghq-module
   - role: ansible-tmux-conf
-    tmux_conf_ghq_executable: "{{ansible_env.HOME}}/.go/bin/ghq"
+    ghq_executable: "{{ansible_env.HOME}}/.go/bin/ghq"
     remote_repository_path: suzuki-shunsuke/tmux.conf
